--- a/GBGame/makefile
+++ b/GBGame/makefile
@@ -1,4 +1,5 @@
 all:
 	C:\Libraries\gbdk\bin\lcc -Wa-l -c -o test.o test.c
-	C:\Libraries\gbdk\bin\lcc -Wl-m -Wl-yp0x143=0x80 -o test.gb test.o
+	C:\Libraries\gbdk\bin\lcc -Wa-l -c -o sound.o sound.c
+	C:\Libraries\gbdk\bin\lcc -Wl-m -Wl-yp0x143=0x80 -o test.gb test.o sound.o
 
