--- a/GBGame/makefile
+++ b/GBGame/makefile
@@ -3,5 +3,6 @@ all:
 	C:\Libraries\gbdk\bin\lcc -Wa-l -c -o images.o images.c
 	C:\Libraries\gbdk\bin\lcc -Wa-l -c -o graphics.o graphics.c
 	C:\Libraries\gbdk\bin\lcc -Wa-l -c -o sound.o sound.c
-	C:\Libraries\gbdk\bin\lcc -Wl-m -Wl-yp0x143=0x80 -o shmup.gb main.o images.o graphics.o sound.o
+	C:\Libraries\gbdk\bin\lcc -Wa-l -c -o input.o input.c
+	C:\Libraries\gbdk\bin\lcc -Wl-m -Wl-yp0x143=0x80 -o shmup.gb main.o images.o graphics.o sound.o input.o
 
