Fix wrong main() being used

--- a/GBGame/makefile
+++ b/GBGame/makefile
@@ -11,7 +11,8 @@ all:
 	$(CC) -Wa-l -c -o graphics.o graphics.c
 	$(CC) -Wa-l -c -o sound.o sound.c
 	$(CC) -Wa-l -c -o input.o input.c
-	$(CC) -Wl-m -Wl-yp0x143=0x80 -o shmup.gb main.o state.o images.o graphics.o sound.o input.o
+	$(CC) -Wa-l -c -o test.o test.c
+	$(CC) -Wl-m -o shmup.gb state.o images.o graphics.o sound.o input.o main.o
 
 
 clean:
