--- a/GBGame/makefile
+++ b/GBGame/makefile
@@ -11,8 +11,8 @@ all:
 	$(CC) -Wa-l -c -o graphics.o graphics.c
 	$(CC) -Wa-l -c -o sound.o sound.c
 	$(CC) -Wa-l -c -o input.o input.c
-	$(CC) -Wa-l -c -o test.o test.c
-	$(CC) -Wl-m -o shmup.gb state.o images.o graphics.o sound.o input.o main.o
+	$(CC) -Wa-l -c -o gameai.o gameai.c
+	$(CC) -Wl-m -o shmup.gb state.o images.o graphics.o sound.o input.o gameai.o main.o
 
 
 clean:
