Made all static data const, seemed to fix memory issue

--- a/GBGame/GBGame.vcxproj
+++ b/GBGame/GBGame.vcxproj
@@ -30,6 +30,7 @@
     <None Include="makefile.win" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="assets\qrt_circle_precomp.h" />
     <ClInclude Include="gameai.h" />
     <ClInclude Include="graphics.h" />
     <ClInclude Include="images.h" />
